<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/display">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="darkMode"
            app:title="@string/dark_mode" />

        <ListPreference
            app:entries="@array/units_of_measure_array"
            app:entryValues="@array/units_of_measure_array"
            app:iconSpaceReserved="false"
            app:key="unitsOfMeasure"
            app:title="@string/units_of_measure"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/privacy">

        <ListPreference
            app:entries="@array/who_can_see_my_profile"
            app:entryValues="@array/who_can_see_my_profile"
            app:iconSpaceReserved="false"
            app:key="whoCanSeeMyProfile"
            app:title="@string/who_can_see_my_profile"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/who_can_see_my_location"
            app:entryValues="@array/who_can_see_my_location"
            app:iconSpaceReserved="false"
            app:key="whoCanSeeMyLocation"
            app:title="@string/who_can_see_my_location"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/who_can_see_my_following_count"
            app:entryValues="@array/who_can_see_my_following_count"
            app:iconSpaceReserved="false"
            app:key="whoCanSeeMyFollowingCount"
            app:title="@string/who_can_see_my_following_count"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
