<?xml version="1.0" encoding="utf-8"?>

<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/map_fragment"
        android:name="org.wentura.franko.map.MapFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_map">

        <action
            android:id="@+id/to_activity_save_fragment"
            app:destination="@id/activity_save_fragment" />

    </fragment>

    <fragment
        android:id="@+id/activities_fragment"
        android:name="org.wentura.franko.activities.ActivitiesFragment"
        android:label="@string/activities"
        tools:layout="@layout/fragment_activities" />

    <fragment
        android:id="@+id/settings_fragment"
        android:name="org.wentura.franko.settings.SettingsFragment"
        android:label="@string/settings">

    </fragment>

    <fragment
        android:id="@+id/people_fragment"
        android:name="org.wentura.franko.people.PeopleFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_people">

        <action
            android:id="@+id/to_profile_fragment"
            app:destination="@id/profile_fragment" />

    </fragment>

    <fragment
        android:id="@+id/profile_fragment"
        android:name="org.wentura.franko.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">

        <argument
            android:name="uid"
            app:argType="string" />

        <action
            android:id="@+id/to_following_fragment"
            app:destination="@id/following_fragment" />

        <action
            android:id="@+id/to_followers_fragment"
            app:destination="@id/followers_fragment" />

        <action
            android:id="@+id/to_profile_edit_fragment"
            app:destination="@id/profile_edit_fragment" />

    </fragment>

    <fragment
        android:id="@+id/profile_edit_fragment"
        android:name="org.wentura.franko.profileedit.ProfileEditFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_profile_edit" />

    <fragment
        android:id="@+id/view_pager_fragment"
        android:name="org.wentura.franko.ProfileViewPagerFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_profile_view_pager">

        <action
            android:id="@+id/to_profile_edit_fragment"
            app:destination="@id/profile_edit_fragment" />

        <action
            android:id="@+id/to_activity_fragment"
            app:destination="@id/activity_fragment" />

        <action
            android:id="@+id/to_settings_fragment"
            app:destination="@id/settings_fragment" />

    </fragment>

    <fragment
        android:id="@+id/activity_fragment"
        android:name="org.wentura.franko.activity.ActivityFragment"
        android:label="@string/activity"
        tools:layout="@layout/fragment_activity">

        <argument
            android:name="id"
            app:argType="string" />

        <action
            android:id="@+id/to_activity_edit_fragment"
            app:destination="@id/activity_edit_fragment" />

    </fragment>

    <fragment
        android:id="@+id/activity_edit_fragment"
        android:name="org.wentura.franko.activityedit.ActivityEditFragment"
        android:label="@string/edit_activity">

        <argument
            android:name="id"
            app:argType="string" />

        <action
            android:id="@+id/to_profile_view_pager_fragment"
            app:destination="@id/view_pager_fragment"
            app:popUpTo="@id/view_pager_fragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/following_fragment"
        android:name="org.wentura.franko.following.FollowingFragment"
        android:label="@string/following"
        tools:layout="@layout/fragment_simplified_people">

        <action
            android:id="@+id/to_profile_fragment"
            app:destination="@id/profile_fragment" />

        <argument
            android:name="uid"
            app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/followers_fragment"
        android:name="org.wentura.franko.following.FollowersFragment"
        android:label="@string/followers"
        tools:layout="@layout/fragment_simplified_people">

        <action
            android:id="@+id/to_profile_fragment"
            app:destination="@id/profile_fragment" />

        <argument
            android:name="uid"
            app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/home_fragment"
        android:name="org.wentura.franko.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/to_activity_fragment"
            app:destination="@id/activity_fragment" />

    </fragment>

    <fragment
        android:id="@+id/activity_save_fragment"
        android:name="org.wentura.franko.activitysave.ActivitySaveFragment"
        android:label="@string/save_activity"
        tools:layout="@layout/fragment_activity_save" />

</navigation>
