<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/activity_profile_picture"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintBottom_toTopOf="@id/activity_title"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/activity_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_profile_picture_placeholder" />

    <TextView
        android:id="@+id/activity_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/activity_date"
        app:layout_constraintStart_toEndOf="@id/activity_profile_picture"
        app:layout_constraintTop_toTopOf="@id/activity_profile_picture"
        tools:text="@string/sample_user_name" />

    <TextView
        android:id="@+id/activity_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/activity_profile_picture"
        app:layout_constraintStart_toEndOf="@id/activity_profile_picture"
        app:layout_constraintTop_toBottomOf="@id/activity_username"
        tools:text="@string/example_date" />

    <TextView
        android:id="@+id/activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/activity_duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_profile_picture"
        tools:text="@string/example_activity_title" />

    <TextView
        android:id="@+id/activity_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_title"
        tools:text="@string/example_duration" />

    <TextView
        android:id="@+id/activity_duration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/time_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_duration" />

    <TextView
        android:id="@+id/activity_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/activity_title"
        tools:text="@string/example_length" />

    <TextView
        android:id="@+id/activity_length_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/activity_length_text"
        app:layout_constraintStart_toStartOf="@id/activity_length"
        app:layout_constraintTop_toBottomOf="@id/activity_length" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
